Don't crash when setting up the document synopsis for ODTs with strange heading ordering.

This may still cause the synopsis to look different
to the way the user expected. Will take another
look at that.

BUG: 168678

svn path=/trunk/KDE/kdegraphics/okular/; revision=890395